created store,customer,basket associated classes

--- a/spring-demo/src/main/resources/application.properties
+++ b/spring-demo/src/main/resources/application.properties
@@ -26,7 +26,9 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/database/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
-spring.data.jpa.repositories.enabled=false
+spring.data.jpa.repositories.enabled=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 
 resilience4j.ratelimiter.instances.getMessageRateLimit.limit-for-period=2
 resilience4j.ratelimiter.instances.getMessageRateLimit.limit-refresh-period=5s
